--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         bottom: 0;
         left: 50%;
         transform: translateX(-50%);
-        width: 600px;
-        max-width: 100%;
+        width: 404px;
+        max-width: 404px;
         height: 80px;
         background-color: #FFF5F7; /* JS에서 adBgType으로 덮어씀 */
         display: flex;
