--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       }
 
       .ad-content {
-        display: flex;
+        display: flex; /* 항상 가로 정렬 유지 */
         align-items: center;
         justify-content: space-between;
         width: 100%;
@@ -77,14 +77,14 @@
       }
 
       .ad-middle {
-        display: flex;
+        display: flex; /* 데스크탑: 가로 */
         align-items: center;
-        justify-content: space-between;
-        gap: 16px;
+        gap: 12px;
         flex-grow: 1;
         min-width: 0;
       }
       .ad-middle.vertical-layout {
+        /* 모바일에서만 적용 */
         flex-direction: column;
         align-items: center;
         gap: 6px;
@@ -104,14 +104,14 @@
         text-align: center;
       }
       .ad-line1 {
-        font-size: 13px;
+        font-size: 10px;
         font-weight: 400;
         color: #000000;
         text-align: center;
       }
       .ad-line2 {
-        font-size: 16px;
-        font-weight: bold;
+        font-size: 14px;
+        font-weight: 800;
         color: #000000;
         text-align: center;
       }
@@ -163,6 +163,7 @@
         font-weight: bold;
         border: none;
         font-size: 12px;
+        flex-shrink: 0;
       }
       .ad-cta:hover {
         background-color: #f37482;
@@ -195,17 +196,17 @@
 
       @media (max-width: 404px) {
         .in-image-ad {
-          height: 80px;
+          height: 80px; /* 고정 높이 유지(원하면 auto로 바꿔도 됨) */
+          width: 300px;
         }
-        .ad-content {
-          align-items: center;
-        }
+        /* ad-content는 그대로 가로 유지 (중요!) */
         .ad-middle {
           width: 100%;
         }
         .ad-middle.vertical-layout {
           flex-direction: column;
           align-items: center;
+          gap: 6px;
         }
         .ad-text {
           display: none !important;
@@ -213,27 +214,36 @@
         .ad-text-hover {
           display: block !important;
         }
+        .ad-cta {
+          margin-top: 4px;
+        } /* ad-middle 안으로 들어가면 아래 여백 */
       }
     </style>
   </head>
   <body>
     <div class="in-image-bg" id="bg"></div>
     <div class="in-image-ad" id="ad">
-      <div class="ad-content">
+      <div class="ad-content" id="adContent">
         <img class="ad-logo" id="logo" alt="브랜드 로고" />
+
+        <!-- 가운데(텍스트 영역) -->
         <div class="ad-middle" id="adMiddle">
           <div class="ad-text" id="brandText">브랜드</div>
           <div class="ad-text-hover">
             <div class="ad-line1" id="line1">브랜드</div>
             <div class="ad-line2" id="line2">혜택 문구</div>
           </div>
-          <button class="ad-cta" id="ctaBtn">구매하기</button>
         </div>
+
+        <!-- 상품 이미지 -->
         <div class="ad-products">
           <span class="product-image-wrapper" id="prodWrap">
             <img class="product-image" id="product" alt="제품 이미지" />
           </span>
         </div>
+
+        <!-- CTA 버튼: 데스크탑은 상품 오른쪽에 위치 -->
+        <button class="ad-cta" id="ctaBtn">구매하기</button>
       </div>
     </div>
 
@@ -243,11 +253,9 @@
 
         // ===== 파라미터(기본값 포함) =====
         const data = {
-          // 이미지
           logo: qs.get('logo') || './logo.png',
           product: qs.get('product') || './image.png',
 
-          // 텍스트
           brand: qs.get('brand') || '{NAME}',
           line1: qs.get('line1') || '{TEXT1}',
           line2: qs.get('line2') || '{TEXT2}',
@@ -255,15 +263,14 @@
           lineClolor1: qs.get('lineClolor1') || '{TEXT_COLOR1}',
           lineClolor2: qs.get('lineClolor2') || '{TEXT_COLOR2}',
           ctaText: qs.get('ctaText') || '구매하기',
-          // 동작/색상
+
           cta: qs.get('cta') || '#', // 버튼 전용 이동
           click: qs.get('click') || '', // 배너 전체 클릭
-          bg: qs.get('bg') || '{BACKGROUND_COLOR}', // 하단 바
-          shake: qs.get('shake') !== '0', // 기본 true
+          bg: qs.get('bg') || '{BACKGROUND_COLOR}',
+          shake: qs.get('shake') !== '0',
           autohide: parseInt(qs.get('autohide') || '0', 10) || 0,
           imp: qs.get('imp') || '',
 
-          // 사이즈/맞춤
           logoW: qs.get('logoW') || '',
           logoH: qs.get('logoH') || '',
           logoFit: qs.get('logoFit') || '',
@@ -271,16 +278,16 @@
           productH: qs.get('productH') || '',
           productFit: qs.get('productFit') || '',
 
-          // 배너 본체 배경(.in-image-ad)
           adBgType: (qs.get('adBgType') || '').toLowerCase(), // '', 'solid', 'gradient'
           adBgSolid: qs.get('adBgSolid') || '{AD_COLOR}',
           adBgStart: qs.get('adBgStart') || '#3a3a3a',
           adBgEnd: qs.get('adBgEnd') || '#1f1f1f',
         };
 
-        // ===== 요소 바인딩 =====
+        // ===== 요소 =====
         const barBg = document.getElementById('bg');
         const ad = document.getElementById('ad');
+        const adContent = document.getElementById('adContent');
         const logo = document.getElementById('logo');
         const product = document.getElementById('product');
         const prodWrap = document.getElementById('prodWrap');
@@ -290,23 +297,24 @@
         const ctaBtn = document.getElementById('ctaBtn');
         const adMiddle = document.getElementById('adMiddle');
 
-        // 하단 바 색
+        // 색상 반영
         barBg.style.backgroundColor = data.bg;
         brandTx.style.color = data.nameClolor;
         line1Tx.style.color = data.lineClolor1;
         line2Tx.style.color = data.lineClolor2;
-        // 배너 본체 배경(.in-image-ad)
+
+        // 배경 스타일
         (function applyAdBackground() {
           if (data.adBgType === 'solid') {
             ad.style.background = data.adBgSolid;
           } else if (data.adBgType === 'gradient') {
             ad.style.background = `linear-gradient(to right, ${data.adBgStart} 0%, ${data.adBgStart} 10%, ${data.adBgEnd} 100%)`;
           } else {
-            // 기본 CSS(#282828) 유지
+            // 기본 CSS 유지
           }
         })();
 
-        // 이미지/텍스트 주입
+        // 콘텐츠 주입
         logo.src = data.logo;
         product.src = data.product;
         brandTx.textContent = data.brand;
@@ -314,28 +322,41 @@
         line2Tx.textContent = data.line2;
         ctaBtn.textContent = data.ctaText;
 
-        // 사이즈/맞춤 적용 유틸
+        // 크기/맞춤 적용
         function applyDim(el, w, h, fit) {
           if (!el) return;
           if (w) el.style.width = w;
           if (h) el.style.height = h;
           if (fit) el.style.objectFit = fit;
         }
-        // 로고 크기/맞춤
         applyDim(logo, data.logoW, data.logoH, data.logoFit);
-        // 상품: wrapper와 이미지 모두 조절
         if (data.productW) prodWrap.style.width = data.productW;
         if (data.productH) prodWrap.style.height = data.productH;
         applyDim(product, data.productW, data.productH, data.productFit);
 
-        // 로드 애니메이션 + 동작들
+        // ===== 뷰포트에 따라 CTA를 ad-middle로 이동(모바일) 또는 복귀(데스크탑) =====
+        function placeCtaByViewport() {
+          const isMobile = window.innerWidth < 600;
+          if (isMobile) {
+            // 중앙 영역만 세로가 되도록 클래스 부여 & 버튼 삽입
+            adMiddle.classList.add('vertical-layout');
+            if (ctaBtn.parentElement !== adMiddle) {
+              adMiddle.appendChild(ctaBtn);
+            }
+          } else {
+            // 데스크탑: 중앙 영역 가로, 버튼은 상품 오른쪽(원래 자리)
+            adMiddle.classList.remove('vertical-layout');
+            if (ctaBtn.parentElement !== adContent) {
+              adContent.appendChild(ctaBtn);
+            }
+          }
+        }
+
         window.addEventListener('load', () => {
           barBg.classList.add('visible');
 
-          // 모바일 레이아웃
-          if (window.innerWidth < 404 && adMiddle) {
-            adMiddle.classList.add('vertical-layout');
-          }
+          // 초기 위치 세팅
+          placeCtaByViewport();
 
           // 자동 숨김
           if (data.autohide > 0) {
@@ -387,6 +408,9 @@
           startShake();
           ctaBtn.addEventListener('mouseenter', stopShake);
           ctaBtn.addEventListener('mouseleave', startShake);
+
+          // 리사이즈 대응
+          window.addEventListener('resize', placeCtaByViewport);
         });
       })();
     </script>
