--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
           lineClolor2: qs.get('lineClolor2') || '{TEXT_COLOR2}',
           ctaText: qs.get('ctaText') || '구매하기',
 
-          cta: qs.get('cta') || '#', // 버튼 전용 이동
-          click: qs.get('click') || '', // 배너 전체 클릭
+          cta: qs.get('cta3') || '#', // 버튼 전용 이동
+          click: qs.get('click3') || '', // 배너 전체 클릭
           bg: qs.get('bg') || '{BACKGROUND_COLOR}',
           shake: qs.get('shake') !== '0',
           autohide: parseInt(qs.get('autohide') || '0', 10) || 0,
