--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
         // ===== 파라미터(기본값 포함) =====
         const data = {
           // 이미지
-          logo: qs.get('logo') || '{IMAGE_LOGO}',
-          product: qs.get('product') || '{IMAGE1}',
+          logo: qs.get('logo') || './logo.png',
+          product: qs.get('product') || './image.png',
           pixel: qs.get('pixel') || '{PIXEL_TRACKER}',
 
           brand: qs.get('brand') || '{NAME}',
