--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang='ko'>
+<html lang="ko">
   <head>
-    <meta charset='UTF-8' />
-    <meta name='viewport' content='width=device-width, initial-scale=1, user-scalable=no' />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <title>In-Image Ad</title>
     <style>
       html,
@@ -180,6 +180,12 @@
         border: none;
         padding: 0;
         cursor: pointer;
+        width: 14px;
+        height: 14px;
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
       #aisum {
         position: absolute;
@@ -244,47 +250,47 @@
         } /* ad-middle 안으로 들어가면 아래 여백 */
 
         .product-image-wrapper {
-          overflow: visible;   /* 확대될 때 클리핑 방지 */
+          overflow: visible; /* 확대될 때 클리핑 방지 */
         }
         .product-image {
-          transform: scale(1.3);  /* 항상 1.3배 */
-          z-index: 20;            /* 다른 요소 위에 보이게 */
+          transform: scale(1.3); /* 항상 1.3배 */
+          z-index: 20; /* 다른 요소 위에 보이게 */
         }
       }
     </style>
   </head>
   <body>
-    <div class='in-image-bg' id='bg'>
-      <button id='close'>
-        <img src='https://static.piclick.kr/images/logos/close.png' alt='close' />
+    <div class="in-image-bg" id="bg">
+      <button id="close">
+        <img src="https://static.piclick.kr/images/logos/close.png" alt="close" />
       </button>
     </div>
-    <div class='in-image-ad' id='ad'>
-      <a id='aisum' href='https://aedi.ai/' target='_blank'>
-        <img src='https://static.piclick.kr/images/logos/aisum.png' alt='aisum' />
+    <div class="in-image-ad" id="ad">
+      <a id="aisum" href="https://aedi.ai/" target="_blank">
+        <img src="https://static.piclick.kr/images/logos/aisum.png" alt="aisum" />
       </a>
-      <div class='ad-content' id='adContent'>
-        <img class='pixel' id='pixel' />
-        <img class='ad-logo' id='logo' alt='브랜드 로고' />
+      <div class="ad-content" id="adContent">
+        <img class="pixel" id="pixel" />
+        <img class="ad-logo" id="logo" alt="브랜드 로고" />
 
         <!-- 가운데(텍스트 영역) -->
-        <div class='ad-middle' id='adMiddle'>
-          <div class='ad-text' id='brandText'>브랜드</div>
-          <div class='ad-text-hover'>
-            <div class='ad-line1' id='line1'>브랜드</div>
-            <div class='ad-line2' id='line2'>혜택 문구</div>
+        <div class="ad-middle" id="adMiddle">
+          <div class="ad-text" id="brandText">브랜드</div>
+          <div class="ad-text-hover">
+            <div class="ad-line1" id="line1">브랜드</div>
+            <div class="ad-line2" id="line2">혜택 문구</div>
           </div>
         </div>
 
         <!-- 상품 이미지 -->
-        <div class='ad-products'>
-          <span class='product-image-wrapper' id='prodWrap'>
-            <img class='product-image' id='product' alt='제품 이미지' />
+        <div class="ad-products">
+          <span class="product-image-wrapper" id="prodWrap">
+            <img class="product-image" id="product" alt="제품 이미지" />
           </span>
         </div>
 
         <!-- CTA 버튼: 데스크탑은 상품 오른쪽에 위치 -->
-        <button class='ad-cta' id='ctaBtn'>구매하기</button>
+        <button class="ad-cta" id="ctaBtn">구매하기</button>
       </div>
     </div>
 
@@ -303,7 +309,7 @@
         const data = {
           // 이미지
           logo: qs.get('logo') || './logo.png',
-          product: qs.get('product') || './image.png',
+          product: qs.get('product') || './food.png',
           pixel: qs.get('pixel') || '{PIXEL_TRACKER}',
 
           brand: qs.get('brand') || '{NAME}',
