--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         const data = {
           // 이미지
           logo: qs.get('logo') || './logo.png',
-          product: qs.get('product') || './food.png',
+          product: qs.get('product') || './image.png',
           pixel: qs.get('pixel') || '{PIXEL_TRACKER}',
 
           brand: qs.get('brand') || '{NAME}',
