--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       body {
         margin: 0;
         padding: 0;
-        overflow: visible;
+        overflow: hidden;
         background: transparent;
         height: 100%;
       }
@@ -507,3 +507,4 @@
     </script>
   </body>
 </html>
+
